Add swagger to flight controller
